# ackermann_vehicle

./: README.md
ackermann_vehicle/: CHANGELOG.rst  CMakeLists.txt  package.xml
ackermann_vehicle_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
ackermann_vehicle_description/launch/: ackermann_vehicle.launch  ackermann_vehicle_hokuyo.launch  ackermann_vehicle_hokuyo_imu.launch  ackermann_vehicle_rviz.launch  rviz.launch
ackermann_vehicle_description/urdf/: em_3905.urdf.xacro  em_3905_hokuyo.urdf.xacro  em_3905_hokuyo_imu.urdf  em_3905_hokuyo_imu.urdf.xacro
ackermann_vehicle_gazebo/: CHANGELOG.rst  CMakeLists.txt  epydoc.config  package.xml  rosdoc.yaml
ackermann_vehicle_gazebo/config/: em_3905_ackermann_ctrlr_params.yaml  em_3905_ctrlr_params.yaml  em_3905_joint_ctrlr_params.yaml  em_3905_ros_ctrlr_params.yaml
ackermann_vehicle_gazebo/launch/: ackermann_vehicle.launch  ackermann_vehicle_hokuyo.launch  ackermann_vehicle_hokuyo_imu.launch  ackermann_vehicle_joy.launch  pub_problem.launch
ackermann_vehicle_gazebo/nodes/: ackermann_controller.py  pub_problem.py
ackermann_vehicle_gazebo/scripts/: ackermann_controller
ackermann_vehicle_gazebo/worlds/: model.config  model.sdf  parking_lot.world  parking_lot_e_shape.world  parking_lot_vertical.world
ackermann_vehicle_gazebo/worlds/wall/: model.config  model.sdf
ackermann_vehicle_navigation/: CMakeLists.txt  package.xml
ackermann_vehicle_navigation/launch/: path_follower.launch  path_follower_test.launch
ackermann_vehicle_navigation/log/: 11812.464_log.txt  13032.778_log.txt  14190.21_log.txt  14821.078_log.txt  16065.057_log.txt  17216.88_log.txt  e_shape.txt  kino_bar_graph.py  kino_time.txt  parking_lot.txt  plotter.py  vertical_log.txt  world_1_0.csv  world_1_1.csv  world_1_2.csv  world_1_3.csv  world_1_4.csv  world_1_5.csv  world_1_6.csv  world_1_7.csv  world_1_8.csv  world_1_9.csv  world_2_0.csv  world_2_1.csv  world_2_2.csv  world_2_3.csv  world_2_4.csv  world_2_5.csv  world_2_6.csv  world_2_7.csv  world_2_8.csv  world_2_9.csv  world_3_0.csv  world_3_1.csv  world_3_2.csv  world_3_3.csv  world_3_4.csv  world_3_5.csv  world_3_6.csv  world_3_7.csv  (+2 more)
ackermann_vehicle_navigation/log/execution_time/: e_shape.txt
ackermann_vehicle_navigation/log/execution_time/rrt_rrtstar_neuralrrt/: e_shape.txtbackuo  parking_lot.txt
ackermann_vehicle_navigation/log/planning_time/rrt_rrtstar_neuralrrt/: Neural_rrt_0_map_e_shape.npz  Neural_rrt_0_map_vertical_revised.npz  Neural_rrt_0_me652_parking_map.npz  Neural_rrt_1_map_e_shape.npz  Neural_rrt_1_map_vertical_revised.npz  Neural_rrt_1_me652_parking_map.npz  Neural_rrt_2_map_e_shape.npz  Neural_rrt_2_map_vertical_revised.npz  Neural_rrt_2_me652_parking_map.npz  Neural_rrt_3_map_e_shape.npz  Neural_rrt_3_map_vertical_revised.npz  Neural_rrt_3_me652_parking_map.npz  Neural_rrt_4_map_e_shape.npz  Neural_rrt_4_map_vertical_revised.npz  Neural_rrt_4_me652_parking_map.npz  Neural_rrt_5_map_e_shape.npz  Neural_rrt_5_map_vertical_revised.npz  Neural_rrt_5_me652_parking_map.npz  Neural_rrt_6_map_e_shape.npz  Neural_rrt_6_map_vertical_revised.npz  Neural_rrt_6_me652_parking_map.npz  Neural_rrt_7_map_e_shape.npz  Neural_rrt_7_map_vertical_revised.npz  Neural_rrt_7_me652_parking_map.npz  Neural_rrt_8_map_e_shape.npz  Neural_rrt_8_map_vertical_revised.npz  Neural_rrt_8_me652_parking_map.npz  Neural_rrt_9_map_e_shape.npz  Neural_rrt_9_map_vertical_revised.npz  Neural_rrt_9_me652_parking_map.npz  Neural_rrt_star_0_map_e_shape.npz  Neural_rrt_star_0_map_vertical_revised.npz  Neural_rrt_star_0_me652_parking_map.npz  Neural_rrt_star_1_map_e_shape.npz  Neural_rrt_star_1_map_vertical_revised.npz  Neural_rrt_star_1_me652_parking_map.npz  Neural_rrt_star_2_map_e_shape.npz  Neural_rrt_star_2_map_vertical_revised.npz  Neural_rrt_star_2_me652_parking_map.npz  Neural_rrt_star_3_map_e_shape.npz  (+80 more)
ackermann_vehicle_navigation/path/: Neural_rrt_1.npz  Neural_rrt_star_0.npz  test_path.txt
ackermann_vehicle_navigation/scripts/: cmd_vel_to_ackermann_drive.py  path_follower.py  path_follower_tester.py  path_publisher.py  path_publisher_npz.py  tf_odom_publisher.py  tf_publisher.py
