<?xml version="1.0"?>
<package>
  <name>ackermann_vehicle</name>
  <version>1.0.0</version>
  <description>
    This metapackage contains files for simulating a vehicle with Ackermann
    steering.

    Copyright (c) 2011-2013 Wunderkammer Laboratory
  </description>
  <maintainer email="jim.rothrock@wunderkammerlab.com">
    Jim Rothrock, Wunderkammer Laboratory
  </maintainer>
  <license>TODO</license>

  <author email="jim.rothrock@wunderkammerlab.com">
    Jim Rothrock, Wunderkammer Laboratory
  </author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ackermann_vehicle_description</run_depend>
  <run_depend>ackermann_vehicle_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
