<?xml version="1.0"?>
<package>
  <name>ackermann_vehicle_description</name>
  <version>1.0.0</version>
  <description>
    ackermann_vehicle_description contains the description (3D model,
    kinematics, mass, etc.) of a vehicle with Ackermann steering.

    Copyright (c) 2011-2013 Wunderkammer Laboratory
  </description>
  <maintainer email="jim.rothrock@wunderkammerlab.com">
    Jim Rothrock, Wunderkammer Laboratory
  </maintainer>
  <license>TODO</license>

  <author email="jim.rothrock@wunderkammerlab.com">
    Jim Rothrock, Wunderkammer Laboratory
  </author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
</package>
