<?xml version="1.0"?>
<package>
  <name>ackermann_vehicle_description</name>
  <version>1.0.0</version>
  <description>
    ackermann_vehicle_description contains the description (3D model,
    kinematics, mass, etc.) of a vehicle with Ackermann steering.

    Copyright (c) 2011-2013 Wunderkammer Laboratory

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
  </description>
  <maintainer email="jim.rothrock@wunderkammerlab.com">
    Jim Rothrock, Wunderkammer Laboratory
  </maintainer>
  <license>Apache 2.0</license>

  <author email="jim.rothrock@wunderkammerlab.com">
    Jim Rothrock, Wunderkammer Laboratory
  </author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
